# edbr1-sound-privacy

./: .gitattributes  .gitignore  README.md  RESULTS.md  TODO.md  pyproject.toml
configs/: baseline.yaml  baseline_final.yaml  encoder_nobottleneck.yaml  features.yaml  improved_22k.yaml
configs/adv/: adv_lambda_base.yaml
configs/vq/: vq_00080bps.yaml  vq_00250bps.yaml  vq_01000bps.yaml  vq_02000bps.yaml  vq_04000bps.yaml  vq_16000bps.yaml
data/: README.md
docs/: 00_project_brief.md  01_research_questions.md  02_datasets.md  03_methodology.md  04_evaluation_plan.md  AUDIT.md
docs/figures/: baseline_ablation.json  sweep_data.json
notebooks/: figures.ipynb
scripts/: _download_common.py  download_esc50.py  download_librispeech.py  download_urbansound8k.py  extract_baseline.py  make_figures.py  plot_spectrograms.py  run_bitrate_sweep.py  run_esc50_probe.py  run_lambda_sweep.py  run_overlay_robustness.py  run_probes.py  train_probe_encoders.py  verify_environment.py
src/edbr1/: bitrate.py  config.py  evaluate.py  train.py
src/edbr1/data/: __init__.py  augment.py  esc50.py  librispeech.py  overlay.py  urbansound8k.py
src/edbr1/features/: __init__.py  melspec.py
src/edbr1/models/: __init__.py  adversary.py  bottleneck.py  classifier.py  cnn.py  encoder.py  encoder_classifier.py
src/edbr1/probes/: __init__.py  frozen.py  metrics.py  models.py  splits.py  train.py
src/edbr1/utils/: __init__.py  seed.py
tests/: test_adversary.py  test_augment_norm.py  test_bitrate.py  test_bottleneck.py  test_config.py  test_esc50.py  test_features.py  test_frontier.py  test_frozen.py  test_overlay.py  test_probe_metrics.py  test_probe_splits.py  test_smoke.py  test_splits.py
