[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edbr1"
version = "0.0.1"
description = "EDBR.1 — Detecting Sounds with Privacy. Privacy–utility–compute trade-offs of low-bitrate on-device audio encoders for environmental sound classification, evaluated against adversarial speech-leakage probes."
requires-python = ">=3.11,<3.13"
readme = "README.md"
authors = [
    { name = "EDBR.1 MSc dissertation", email = "noreply@warwick.ac.uk" },
]
dependencies = [
    "numpy",
    "pandas",
    "pyyaml",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
]
# Heavyweight ML / audio stack. Kept out of the base install so the
# scaffolding, download scripts and config/split logic stay lightweight.
# Install with:  pip install -e ".[ml]"   (or ".[dev,ml]")
ml = [
    "torch",
    "torchaudio",
    "soundfile",
    "librosa",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
files = ["src", "scripts", "tests"]
mypy_path = ["src", "scripts"]
ignore_missing_imports = true
explicit_package_bases = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
